# uupd-ui

./: justfile  meson.build
.devcontainer/: Dockerfile
src/: meson.build
